experimental/ir/testdata/extend/message_set_proto3.proto.stderr.txt
error: message set type are not supported
  --> testdata/extend/message_set_proto3.proto:6:12
   |
 5 | message M1 {
   | ----------
 6 |     option message_set_wire_format = true;
   |            ^^^^^^^^^^^^^^^^^^^^^^^ declared as message set here
   |
  ::: testdata/extend/message_set_proto3.proto:1:10
   |
 1 | syntax = "proto3";
   |          -------- "proto3" specified here
   |
   = help: message set types cannot be defined in "proto3" only
   = help: message set types are not implemented correctly in most Protobuf
           implementations

error: extension range in "proto3"
  --> testdata/extend/message_set_proto3.proto:7:16
   |
 7 |     extensions 1 to max;
   |                ^^^^^^^^
  ::: testdata/extend/message_set_proto3.proto:1:10
   |
 1 | syntax = "proto3";
   |          -------- "proto3" specified here
   |
   = help: extension numbers cannot be reserved in "proto3"

encountered 2 errors
